--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
+ 
+  "name": "reaction-bot",
   "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
+  "description": "A simple reactionrole bot.",
   "main": "index.js",
   "scripts": {
     "start": "node ."
@@ -19,7 +17,7 @@
     "node": "12.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
+    "url": "https://github.com/font-dk"
   },
   "license": "MIT",
   "keywords": [
